# claudia

./: .gitignore  claudia_tokenizer.json  evaluate.py  evolve.md  experiment.md  generate.py  pyproject.toml  train.py
claudia/: __init__.py  config.py  data.py  grammar.py  model.py  tokenizer.py
