[project]
name = "claudia"
version = "0.1.0"
description = "A small open-weight language model trainable on consumer hardware"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "numpy>=2.4.3",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
